--- a/plugin.yaml
+++ b/plugin.yaml
@@ -2,8 +2,8 @@ name: "cool"
 version: "0.0.1"
 usage: "does something cool"
 description: "does something cool"
-command: "$HELM_BIN list"
+command: "$HELM_PLUGIN_DIR/bin/helm-plugin"
 hooks:
   install: "$HELM_PLUGIN_DIR/install-binary.sh"
   update: "$HELM_PLUGIN_DIR/install-binary.sh"
-useTunnel: true
+useTunnel: false
