--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,12 +12,8 @@ jobs:
     - run:
         name: test style
         command: make test
-
 workflows:
-version: 2
-build:
-  jobs:
-    - build:
-        filters:
-          tags:
-            only: /.*/
+  version: 2
+  build:
+    jobs:
+      - build
