--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,9 @@ jobs:
       - run:
           name: test style
           command: make test
+      - run:
+          name: lint
+          command: make lint
 workflows:
   version: 2
   build:
